--- a/src/features/Feed/Videos/style.css
+++ b/src/features/Feed/Videos/style.css
@@ -1,6 +1,6 @@
-.video-cnt-des{
+.video-cnt-des {
     /* max-width: 470px; */
-    margin: auto
+    margin: auto;
 }
 .video-list-des .video-list {
     display: flex;
@@ -18,22 +18,22 @@
     border-radius: 8px;
     margin-bottom: 16px;
 }
-.video-item-pc__wr{
-    width: calc(100% * 8/10 - 8px);
+.video-item-pc__wr {
+    width: calc(100% * 8 / 10 - 8px);
     margin-right: 8px;
     cursor: pointer;
     position: relative;
-    padding-bottom: calc(100% * 10/9);
+    padding-bottom: calc(100% * 10 / 9);
 }
-.trend-item-ctn .video-item__pc{
+.trend-item-ctn .video-item__pc {
     position: relative;
 }
-.video-item-pc__wr .video-item__pc{
+.video-item-pc__wr .video-item__pc {
     object-fit: cover;
     object-position: top;
     z-index: 3;
 }
-.video-item__pc{
+.video-item__pc {
     object-fit: cover;
     object-position: center;
     width: 100%;
@@ -42,27 +42,27 @@
     border-radius: 8px;
     z-index: 0;
 }
-.blur{
+.blur {
     position: absolute;
     inset: 0;
     backdrop-filter: blur(20px);
     z-index: 2;
 }
-.back-drop__vid{
+.back-drop__vid {
     object-fit: cover;
     object-position: center;
     z-index: 1;
 }
-.video-item-pc header, 
-.video-item-header_ava{
+.video-item-pc header,
+.video-item-header_ava {
     display: flex;
     align-items: center;
 }
-.video-item-pc header{
+.video-item-pc header {
     flex-direction: row;
     justify-content: space-between;
 }
-.video-item-header_name{
+.video-item-header_name {
     font-family: "Nunito";
     font-size: 14px;
     line-height: 26px;
@@ -74,46 +74,45 @@
     display: flex;
     flex-direction: column;
 }
-.video-item-header_time{
+.video-item-header_time {
     font-weight: 500;
     font-size: 10px;
     line-height: 12px;
-    color: #8C8C8C;
+    color: #8c8c8c;
 }
-.video-item_body{
-
+.video-item_body {
 }
-.video-item_body-image{
+.video-item_body-image {
     overflow: hidden;
     display: flex;
 }
-.video-item_product_list{
-    width: calc(100% * 2/10);
+.video-item_product_list {
+    width: calc(100% * 2 / 10);
     position: relative;
-    padding-bottom: calc(100% * 10/9);
+    padding-bottom: calc(100% * 10 / 9);
     display: flex;
     flex-direction: column;
     height: 100%;
     overflow-y: scroll;
 }
-.video-item_product_list>div{
+.video-item_product_list > div {
     position: absolute;
     z-index: 1;
     top: 0;
     bottom: 0;
     width: 100%;
 }
-.video-item_body-status{
-    font-family: 'Nunito';
+.video-item_body-status {
+    font-family: "Nunito";
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
     margin: 12px 0;
 }
-.hastag{
-    color: #8C8C8C;
+.hastag {
+    color: #8c8c8c;
 }
-.video-item_product_item{
+.video-item_product_item {
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -121,12 +120,12 @@
     position: relative;
     margin-bottom: 8px;
 }
-.video-item_product_item-img{
+.video-item_product_item-img {
     border-radius: 8px;
     overflow: hidden;
 }
-.video-item_product_item-title{
-    font-family: 'Nunito';
+.video-item_product_item-title {
+    font-family: "Nunito";
     font-style: normal;
     font-weight: 600;
     font-size: 10px;
@@ -138,24 +137,24 @@
     word-wrap: break-word;
     overflow-y: hidden;
 }
-.video-item_product_item-price{
-    font-family: 'Nunito';
+.video-item_product_item-price {
+    font-family: "Nunito";
     font-style: normal;
     font-weight: 700;
     font-size: 10px;
     line-height: 12px;
-    color: var(--text-orange)
+    color: var(--text-orange);
 }
-.video-item_product_item-special_price{
-    font-family: 'Nunito';
+.video-item_product_item-special_price {
+    font-family: "Nunito";
     font-style: normal;
     font-weight: 600;
     font-size: 8px;
     line-height: 10px;
-    color: #8C8C8C;
+    color: #8c8c8c;
     text-decoration: line-through;
 }
-.video-item_product_item-add_cart{
+.video-item_product_item-add_cart {
     width: 12px;
     height: 12px;
     margin-left: auto;
@@ -163,63 +162,64 @@
     bottom: 0;
     right: 0;
 }
-.react-btn{
+.react-btn {
     display: flex;
     margin: 12px 0;
 }
-.react-btn>div{
+.react-btn > div {
     display: flex;
     align-items: center;
-    font-family: 'Nunito';
+    font-family: "Nunito";
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
     margin: 0 6px;
 }
-.react-btn>div>span{
+.react-btn > div > span {
     margin-left: 4px;
     font-weight: 600;
 }
-.react-btn .icon{
+.react-btn .icon {
     width: 16px;
 }
-.react-btn>div:first-child{
+.react-btn > div:first-child {
     margin-left: 0;
 }
-.react-btn>div:last-child{
+.react-btn > div:last-child {
     margin-right: 0;
 }
-.video-item_comments .evaluate-input{
+.video-item_comments .evaluate-input {
     padding: 0;
 }
-.video-item-comments-preview_item{
-    font-family: 'Nunito';
+.video-item-comments-preview_item {
+    font-family: "Nunito";
 }
-.video-item-comments-preview_item .cmt_name{
+.video-item-comments-preview_item .cmt_name {
     font-weight: 700;
     font-size: 12px;
     line-height: 16px;
     padding-right: 6px;
 }
-.video-item-comments-preview_item .cmt_body{
+.video-item-comments-preview_item .cmt_body {
     font-weight: 600;
     font-size: 12px;
     line-height: 16px;
 }
-.video-item-comments-read_all{
-    font-family: 'Nunito';
+.video-item-comments-read_all {
+    font-family: "Nunito";
     font-style: normal;
     font-weight: 500;
     font-size: 10px;
     line-height: 16px;
     margin-bottom: 12px;
     display: flex;
+    cursor: pointer;
 }
-.video-item-comments-read_all>img{
+.video-item-comments-read_all > img {
     margin-left: 4px;
 }
-.video-item_dialog{
+.video-item_dialog {
     display: flex;
     flex-direction: row;
     max-width: 1400px;
@@ -228,43 +228,45 @@
     background-color: var(--bgWhite);
     border-radius: 8px;
 }
+
 /* REVIEW COMPONENT CUSTOM  */
-.video-item_dialog .org-evaluate__cnt .org-evaluate__title{
+.video-item_dialog .org-evaluate__cnt .org-evaluate__title {
     display: none;
 }
-.video-item_dialog .org-evaluate__cnt .input-btn{
+.video-item_dialog .org-evaluate__cnt .input-btn {
     right: 30px;
 }
-.video-item_dialog .org-evaluate__cnt .evaluate-rating{
+.video-item_dialog .org-evaluate__cnt .evaluate-rating {
     display: none;
 }
-.video-item_dialog .video-item-pc__wr{
+.video-item_dialog .video-item-pc__wr {
     width: 70%;
+    margin-right: 0;
 }
-.video-item_dialog .video-item-pc__wr .video-item__pc{
-    /* width: max-content; */
+.video-item_dialog .video-item-pc__wr .video-item__pc {
+    border-radius: unset;
 }
-.video-item_dialog-body{
+.video-item_dialog-body {
     height: 100%;
     overflow-y: scroll;
     width: 30%;
 }
-.video-item_dialog-body{
+.video-item_dialog-body {
     padding: 24px 0;
 }
-.video-item_dialog-body>header,
+.video-item_dialog-body > header,
 .video-item_dialog-body .video-item_body-status,
-.video-item_dialog-body .video-item_react-ctn{
+.video-item_dialog-body .video-item_react-ctn {
     padding-left: 16px;
     padding-right: 16px;
 }
 .video-item_dialog-body .org-evaluate__cnt .evaluate-input,
 .video-item_dialog-body .org-evaluate__cnt .total-comment,
-.video-item_dialog-body .org-evaluate__cnt .evaluate-comment{
+.video-item_dialog-body .org-evaluate__cnt .evaluate-comment {
     padding-left: 16px;
     padding-right: 16px;
 }
-.close_btn{
+.close_btn {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -272,77 +274,102 @@
     background: var(--purple);
     border-radius: 100%;
 }
-.close_btn>img{
+.close_btn > img {
 }
-@media only screen and (min-width: 1023px){
-    .video-item-pc__wr{
+@media only screen and (min-width: 1024px) {
+    .video-item-pc__wr {
         width: 100%;
         padding-bottom: calc(100% * 0.5);
     }
-    .video-item-pc__wr .video-item__pc{
+    .video-item-pc__wr .video-item__pc {
         object-fit: contain;
         object-position: top;
         z-index: 3;
     }
-    .video-item_product_list{
+    .video-item_product_list {
         padding-bottom: calc(100% * 0.5);
-    }   
-    .video-item__pc.back-drop__vid{
+    }
+    .video-item__pc.back-drop__vid {
         object-fit: cover;
         object-position: center;
         z-index: 1;
     }
-    .video-item_dialog .video-item__pc{
+    .video-item_dialog .video-item__pc {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
     }
 }
-@media only screen and (max-width: 1023px){
-    .video-item_dialog .video-item-pc__wr{
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .video-item_dialog .video-item-pc__wr {
         width: 50%;
     }
-    .video-item_dialog-body{
+    .video-item_dialog-body {
         width: 50%;
     }
-    .video-item_dialog .video-item-pc__wr{
+    .video-item_dialog .video-item-pc__wr {
         padding-bottom: 50%;
     }
-    .video-item_dialog .video-item-pc__wr .video-item__pc{
+    .video-item_dialog .video-item-pc__wr .video-item__pc {
         object-fit: contain;
         object-position: center;
         width: 100%;
         z-index: 3;
     }
-    .video-item_dialog .video-item-pc__wr .video-item__pc.back-drop__vid{
+    .video-item_dialog .video-item-pc__wr .video-item__pc.back-drop__vid {
         z-index: 1;
         object-fit: cover;
     }
-    .video-item_dialog{
-        height: 100vh;
+    .video-item_dialog {
+        height: 50vh;
     }
 }
 
-@media only screen and (max-width: 475px){
-    .close_btn{
+@media only screen and (max-width: 767px) {
+    .video-item__pc {
+        border-radius: 0;
+    }
+    .close_btn {
         left: 10px;
         right: unset;
     }
-    .video-item_dialog{
+    .video-item_dialog {
         flex-direction: column;
         width: 100vw;
         overflow-y: scroll;
     }
-    .video-item_dialog .video-item-pc__wr{
+    .video-item_dialog .video-item-pc__wr {
         width: 100%;
-        padding-bottom: calc(100% * 1024/576);
+        padding-bottom: calc(100% * 1024 / 576);
     }
-    .video-item_dialog-body{
+    .video-item_dialog-body {
         width: 100%;
         overflow-y: unset;
         height: max-content;
     }
+    .video-item_dialog-body .org-evaluate__cnt .evaluate-input {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .video-item_dialog .evaluate-comment:not(:last-child) {
+        padding-bottom: 24px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .video-item_dialog .org-evaluate__cnt {
+        padding: 0 12px;
+    }
     .blur,
-    .video-item__pc.back-drop__vid{
+    .video-item__pc.back-drop__vid {
         display: none;
+    }
+    .video-item_dialog-body .org-evaluate__cnt .evaluate-comment {
+        padding: 24px 0;
+    }
+    .MuiPaper-root.MuiDialog-paper {
+        border-radius: 0;
+    }
+    .video-item_dialog {
+        height: 100vh;
+        border-radius: 0;
     }
 }
