[UPDATE] home header mobile

--- a/src/features/Search/style.css
+++ b/src/features/Search/style.css
@@ -1,24 +1,252 @@
-.search-cnt{
-    width: 60vw;
-    height: 86vh;
+.search-cnt {
+    width: 54vw;
+    height: 94vh;
     overflow-y: scroll;
     background-color: var(--white);
     padding: 12px 24px;
 }
-.search-cnt__head-input{
-    background-color: burlywood;
+
+.search-cnt__head-input {
     display: flex;
     flex-direction: row;
     align-items: center;
     position: relative;
 }
-.search-cnt__head-icon{
-    position: absolute;
+
+.search-cnt__head-input img {
+    width: 24px;
+    height: 24px;
 }
-.search-cnt__head-icon-x{
+
+.search-cnt__head-icon {
+    position: absolute;
+    margin-left: 12px;
+}
+
+.search-cnt__head-icon-x {
     position: absolute;
     right: 0;
+    margin-right: 12px;
 }
-.search-cnt__head-input input{
+
+.search-cnt__head-input input {
     width: 100%;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    padding: 8px 38px 8px 42px;
+    border: none;
+    outline: none;
+    background-color: var(--grey_2);
+    border-radius: 8px;
+}
+
+.search-empty-item {
+    margin-top: 20px;
+}
+
+.search-empty-item__head span:nth-child(1),
+.search-section-item__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--purple);
+}
+
+.search-empty-item__head span:nth-child(2) {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: var(--purple);
+    cursor: pointer;
+}
+
+.search-empty-item__list {
+    margin-top: 20px;
+}
+
+.search-empty-item__list .list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.search-empty-item__list .list li {
+    width: 16.6%;
+    padding: 0px 18px;
+    cursor: pointer;
+}
+
+.search-empty-item__list-item img {
+    border-radius: 100%;
+}
+
+.search-empty-item__list-item span {
+    text-align: center;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14px;
+    margin-top: 4px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    color: var(--black);
+}
+
+.search-section-item {
+    margin: 12px 0px;
+}
+
+.search-section-item__list .list li {
+    padding: 6px 0px;
+    border-bottom: solid 1px var(--grey);
+}
+
+.service-result-item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.service-result-item__img {
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+}
+
+.service-result-item__detail {
+    width: calc(100% - 100px);
+    height: 100px;
+    padding-left: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.service-result-item__detail .name {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+    color: var(--text-black);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+}
+
+.service-result-item__detail .price span:nth-child(1) {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--orange);
+}
+
+.service-result-item__detail .price span:nth-child(2) {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--text-hover);
+    margin-left: 8px;
+    text-decoration: line-through;
+}
+
+.service-result-item__detail .bottom-left img {
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    margin-right: 12px;
+}
+
+.service-result-item__detail .bottom-left span {
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    width: 100px;
+    height: 12px;
+    overflow: hidden;
+}
+
+.service-result-item__detail .bottom-right .item-icon {
+    width: 14px;
+    height: 14px;
+    margin-right: 4px;
+}
+
+.service-result-item__detail .bottom-right span {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14px;
+}
+
+@media only screen and (max-width: 1023px) {
+    .search-cnt {
+        padding: 9px 12px;
+        width: 100%;
+        height: 100%;
+        min-height: 100%;
+    }
+
+    .search-cnt__head {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .search-cnt__head-input {
+        width: calc(100% - 32px);
+    }
+
+    .search-cnt__head-input input {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+    }
+
+    .search-cnt__head-input img {
+        width: 18px;
+        height: 18px;
+    }
+
+    .search-empty-item__list {
+        width: 100%;
+        overflow-x: scroll;
+    }
+
+    .search-empty-item__list .list {
+        flex-wrap: nowrap;
+        width: max-content;
+    }
+
+    .search-empty-item__list .list li {
+        width: fit-content;
+    }
+
+    .search-empty-item__list-item {
+        width: 48px;
+    }
+
+    .search-empty-item__list-item span {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px
+    }
+
+    .search-section-item__list .list li {
+        padding: 12px 0px;
+    }
+
+    .service-result-item__detail .bottom-left img {
+        width: 20px;
+        height: 20px;
+    }
+
+    .service-result-item__detail .bottom-right span {
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 12px;
+    }
 }
