--- a/src/features/FilterServices/filter-services.css
+++ b/src/features/FilterServices/filter-services.css
@@ -20,10 +20,11 @@
 @media only screen and (max-width: 767px) {
     .filter-ser-list li {
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        padding: 4px 8px;
+        font-size: 12px;
     }
-
     .filter-ser-cnt {
-        padding: 16px;
+        padding: 12px 0;
         overflow-x: scroll;
     }
     .filter-ser-list {
@@ -35,16 +36,5 @@
     }
     .home-se-re .home-promo-ser {
         margin-top: 16px;
-    }
-    .home-promo-ser .ser-list {
-        /* flex-wrap: nowrap; */
-        /* width: max-content; */
-        /* display: flex; */
-        grid-gap: 16px;
-        padding: 0px 16px 16px;
-        margin-top: 0;
-        grid-template-columns: repeat(2, 1fr);
-        display: grid;
-        margin: 0;
     }
 }
