--- a/src/features/Map/map.css
+++ b/src/features/Map/map.css
@@ -82,7 +82,7 @@
     font-size: 12px;
     line-height: 18px;
     font-weight: 700;
-    color: var(--text-black);
+    color: grey;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
