--- a/src/features/HomePage/HomeTopService/homeTopService.css
+++ b/src/features/HomePage/HomeTopService/homeTopService.css
@@ -21,7 +21,7 @@
 @media only screen and (max-width: 767px) {
     .home-top__service {
         margin-top: 0;
-        padding: 12px 0 12px 12px;
+        padding: 0 0 12px 12px;
     }
     .home-top__service .home-title__seemore {
         padding-right: 12px;
