--- a/src/features/CartPaymentStatus/cart-status.css
+++ b/src/features/CartPaymentStatus/cart-status.css
@@ -312,7 +312,9 @@
 .pay-view-mb {
     display: none;
 }
-
+#orderInfo{
+    display: none !important;
+}
 /* Mobile */
 @media only screen and (max-width: 1023px) {
     .pay-view-pc {
