--- a/src/features/Search/style.css
+++ b/src/features/Search/style.css
@@ -1,9 +1,12 @@
 .search-cnt {
     width: 54vw;
-    height: 94vh;
+    min-height: 50vh;
+    max-width: 700px;
+    max-height: calc(100vh - 64px);
     overflow-y: scroll;
     background-color: var(--white);
-    padding: 12px 24px;
+    padding: 24px;
+    border-radius: 10px;
 }
 
 .search-cnt__head-input {
@@ -181,7 +184,32 @@
     font-size: 12px;
     line-height: 14px;
 }
-
+.keyword-list {
+    margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 8px 0;
+}
+.keyword-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.keyword-item__title {
+    font-size: 16px;
+    font-weight: bold;
+    color: #8c8c8c;
+}
+.search-cnt__keyword {
+    font-size: 14px;
+    margin-top: 14px;
+    color: #8c8c8c;
+}
+.search-cnt__keyword span {
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--purple);
+}
 @media only screen and (max-width: 1023px) {
     .search-cnt {
         padding: 9px 12px;
@@ -232,7 +260,7 @@
     .search-empty-item__list-item span {
         font-weight: 400;
         font-size: 12px;
-        line-height: 14px
+        line-height: 14px;
     }
 
     .search-section-item__list .list li {
@@ -248,5 +276,38 @@
         font-weight: 500;
         font-size: 10px;
         line-height: 12px;
+    }
+}
+
+@media screen and (max-width: 767.98px) {
+    .search-empty-item__head span:nth-child(1),
+    .search-section-item__title {
+        font-size: 16px;
+    }
+    .search-empty-item__list-item span {
+        font-weight: bold;
+    }
+    .search-empty-item__list-item img {
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
+    .keyword-item__title {
+        font-size: 14px;
+    }
+    .search-cnt__keyword {
+        font-size: 12px;
+        margin-top: 12px;
+        color: #8c8c8c;
+    }
+    .search-cnt__keyword span {
+        font-size: 12px;
+        font-weight: bold;
+        color: var(--purple);
+    }
+    .search-empty-item__head span:nth-child(2) {
+        font-size: 12px;
+        line-height: unset;
+    }
+    .keyword-list {
+        grid-gap: 12px 0;
     }
 }
