--- a/src/features/HeadMobile/style.css
+++ b/src/features/HeadMobile/style.css
@@ -29,6 +29,21 @@
     outline: none;
     border-radius: 6px;
     background-color: var(--grey_2);
+    position: relative;
+}
+
+.head-home-mb__button-item .badge {
+    position: absolute;
+    background-color: var(--red-cl);
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 700;
+    color: var(--white);
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    border-radius: 100%;
+    margin: -12px 0px 0px 4px;
 }
 
 .head-home-mb__button-item:nth-child(1) {
